<resources>
    <string name="app_name">Desafio1_AppVader</string>
    <string name="tipoVuelo">Vuelo</string>
    <string name="tipoBombardeo">Bombardeo</string>
    <string name="tipoCombate">Combate</string>
    <string name="errRellenaCampos">Rellena todos los campos</string>
    <string name="tipoCaza">Caza</string>
    <string name="tipoBombardero">Bombardero</string>
    <string name="tipoNaveTransporte">Nave de transporte</string>
    <string name="nombre">Nombre</string>
    <string name="exp">Experiencia</string>
    <string name="nave">Nave</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="tipo">Tipo</string>
    <string name="duracion">Duración</string>
    <string name="carga">Carga</string>
    <string name="pasajeros">Pasajeros</string>
    <string name="objetivos">Objetivos</string>
    <string name="edad">Edad</string>
    <string name="errSeleccPiloto">Selecciona un piloto</string>
    <string name="con">con</string>
    <string name="errPassword">Las contraseñas no coinciden</string>
    <string name="tituloRanking">RANKING</string>
    <string name="tituloAltaMisiones">REGISTRAR MISION</string>
    <string name="tituloAltaNave">REGISTRAR NAVE</string>
    <string name="tituloAltaPiloto">REGISTRAR PILOTO</string>
    <string name="tituloAsignarMisiones">ASIGNAR MISION</string>
    <string name="tituloBajaMisiones">LISTA DE MISIONES</string>
    <string name="tituloBajaNave">LISTA DE NAVES</string>
    <string name="tituloBajaPiloto">LISTA DE PILOTOS</string>
    <string name="tituloPerfil">PERFIL</string>
    <string name="msjCerrarSesion">Cerrando sesión</string>
    <string name="tituloLogin">INICIAR SESION</string>
    <string name="tituloActivarCuenta">ACTIVAR CUENTA</string>
    <string name="novato">Novato</string>
    <string name="intermedio">Intermedio</string>
    <string name="experto">Experto</string>
    <string name="inicioSim">Iniciando simulación</string>
    <string name="tormentaSolar">Se acerca una tormenta solar</string>
    <string name="tormentaSolarMal">LA TORMENTA ES MAS DESTRUCTIVA DE LO QUE CREIAS</string>
    <string name="tormentaSolarBien">Consigues superar la tormenta solar</string>
    <string name="hasMuerto">HAS MUERTO, MISION FALLIDA</string>
    <string name="ataqueVuelo">Un equipo de rebeldes te a visto y se disponen a atacar</string>
    <string name="ataqueVueloMal">NO HAS PODIDO ESQUIVAR TODOS LOS PROYECTILES ENEMIGOS</string>
    <string name="ataqueVueloBien">Consigues derrotar a los enemigos</string>
    <string name="vueloCompletado">TODAS LAS MANIOBRAS DE VUELO REALIZADAS</string>
    <string name="misionCompletada">MISION COMPLETADA CON EXITO</string>
    <string name="ataqueCombate">Se acerca un caza enemigo</string>
    <string name="ataqueBombardeo">Ves una base rebelde</string>
    <string name="ataqueObjetivosMal">LA HABILIDAD DE LOS ENEMIGOS TE SUPERA Y TE ACABAN DERRIBADO</string>
    <string name="ataqueCombateBien">Destruyes al caza enemigo</string>
    <string name="ataqueBombardeoBien">Consigues bombardear la base</string>
    <string name="objetivosCompletado">TODOS LOS OBJETIVOS DESTRUIDOS</string>
    <string name="tituloMisionesPendientes">MISIONES PENDIENTES</string>
    <string name="tituloMisionesRealizadas">MISIONES REALIZADAS</string>
    <string name="piloto">Piloto</string>
    <string name="administrador">Administrador</string>
    <string name="noPuedesEscapar">No puedes escapar</string>
    <string name="desertar">¿De veras pensabas que ibas a desertar del imperio tan facilmente?</string>
    <string name="siSenior">Señor, si señor</string>
    <string name="usuario">Usuario</string>
    <string name="nivel">Nivel</string>
    <string name="misionesPendientes">Misiones pendientes</string>
    <string name="misionesCompletadas">Misiones completadas</string>
    <string name="misionesFallidas">Misiones fallidas</string>
    <string name="eliminarUsuario">Eliminar usuario</string>
    <string name="eliminarUsuarioPregunta">¿Deseas eliminar a</string>
    <string name="eliminacionCancelada">Eliminación cancelada</string>
    <string name="eliminarMision">Eliminar misión</string>
    <string name="eliminarMisionPregunta">¿Deseas eliminar la misión</string>
    <string name="tituloSimulacion">SIMULACION</string>
    <string name="simularMision">Simular misión</string>
    <string name="simularMisionPregunta">¿Deseas iniciar la simulación de la misión</string>
    <string name="eliminarNave">Eliminar nave</string>
    <string name="eliminarNavePregunta">¿Deseas eliminar la nave</string>
    <string name="password">Contraseña</string>
    <string name="fotoPerfil">Foto de perfil:</string>
    <string name="camara">Cámara</string>
    <string name="galeria">Galería</string>
    <string name="activar">Activar</string>
    <string name="cancelar">Cancelar</string>
    <string name="confirmarPassword">Confirmar contraseña</string>
    <string name="numObjetivos">Nº Objetivos:</string>
    <string name="registrar">Registrar</string>
    <string name="matricula">Matrícula</string>
    <string name="passwordProvisional">Contraseña provisional</string>
    <string name="datosMision">Datos misión:</string>
    <string name="elegirPiloto">Elegir piloto:</string>
    <string name="datosPiloto">Datos piloto:</string>
    <string name="asignar">Asignar</string>
    <string name="pilotoNoSeleccionado">No has seleccionado ningún piloto</string>
    <string name="add">Añadir</string>
    <string name="noHayMisiones">TODAVIA NO HAY MISIONES EN LA BASE DE DATOS</string>
    <string name="noHayNaves">TODAVIA NO HAY NAVES EN LA BASE DE DATOS</string>
    <string name="noHayPilotos">TODAVIA NO HAY PILOTOS EN LA BASE DE DATOS</string>
    <string name="iniciarSesion">Iniciar sesión</string>
    <string name="salir">Salir</string>
    <string name="noHayMisionesAsignadas">NO TIENES NINGUNA MISION ASIGNADA</string>
    <string name="noHayMisionesRealizadas">TODAVIA NO HAS REALIZADO NINGUNA MISION</string>
    <string name="editar">Editar</string>
    <string name="eliminarCuenta">Eliminar cuenta</string>
    <string name="aceptar">Aceptar</string>
    <string name="rol">Rol</string>
    <string name="nivelUsuario">Nivel usuario:</string>
    <string name="simulacion">Simulación:</string>
    <string name="volver">Volver</string>
    <string name="tipoPuntos">Tipo:</string>
    <string name="navePuntos">Nave:</string>
    <string name="misionPuntos">Misión:</string>
    <string name="numTarea">Tarea nº:</string>
    <string name="expPuntos">Exp:</string>
    <string name="detallesMision">-*Pulsa en la misión para ver sus detalles*-</string>
    <string name="detallesSimulacion">-*Mantén pulsado en la misión para iniciar la simulación*-</string>
    <string name="eliminar">Eliminar</string>
    <string name="edadPuntos">Edad:</string>
    <string name="detallesPiloto">-*Pulsa en el piloto para ver sus detalles*-</string>
    <string name="cargaPuntos">Carga:</string>
    <string name="pasajerosPuntos">Pasajeros:</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="tituloCerrarSesion">CERRAR SESION</string>
    <string name="errRegistrar">Error al registrar</string>
    <string name="msjMisionRegistrada">Misión registrada correctamente</string>
    <string name="msjNaveRegistrada">Nave registrada correctamente</string>
    <string name="errMatricula">La matrícula ya existe</string>
    <string name="errUsuario">El usuario ya existe</string>
    <string name="msjUsuarioRegistrado">Usuario registrado correctamente</string>
    <string name="errAsignar">Error al asignar</string>
    <string name="msjMisionAsignada">Misión asignada correctamente</string>
    <string name="errMision">No existe la misión</string>
    <string name="errEliminar">Error al eliminar</string>
    <string name="msjMisionEliminada">Misión eliminada</string>
    <string name="errNave">No existe la nave</string>
    <string name="msjNaveEliminada">Nave eliminada</string>
    <string name="errUsuario2">No existe el usuario</string>
    <string name="msjUsuarioEliminado">Usuario eliminado</string>
    <string name="errActivar">Error al activar la cuenta</string>
    <string name="msjPerfilActualizado">Perfil actualizado correctamente</string>
    <string name="errPassword2">Contraseña incorrecta</string>
    <string name="msjSesionIniciada">Sesión iniciada</string>
    <string name="errActualizarEstado">Error al actualizar el estado de la misión</string>
    <string name="errAddExperiencia">Error al añadir la experiencia al usuario</string>
    <string name="errActualizarPerfil">Error al actualizar los datos del perfil</string>
    <string name="filtrar">Filtrar</string>
    <string name="noHayNavesCondiciones">(No existen naves que cumplan esas condiciones)</string>
    <string name="errEspacion">Ni el usuario ni la contraseña pueden contener espacios</string>
</resources>